# paper_dot

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  manage.py  mypy.ini  pyproject.toml  tox.ini
maple/: steady_state.mw
src/: admm.py  base.py  constraints.py  evaluation.py  fcr.py  objective.py  optimization.py  prepare_problem_v2.py  problem_v2.py
src/common/: utils.py
src/dashboard/: README.md
src/experiment_manager/: cache.py  core.py
src/experiments/: __init__.py  experiment.py
src/plots/: plot_results.py
src/scripts/: create_fcr_2023.py  create_mfrr_data.py  plot_4thorder.py  prepare_and_plot.py  scenarios_fcr.py  sde.R
src/tests/: test_.py
tex/: comment.cut  ieee.aux  ieee.bbl  ieee.blg  ieee.fdb_latexmk  ieee.fls  ieee.tex  sigconf.tex
tex/bibliography/: Bibliography.bib  sigconf_bib.bib
tex/figures/: furnace_schematic_tikz.tex  furnace_schematic_tikz.tikz  timeline.tikz
tex/old/: ieee.aux  ieee.bbl  ieee.blg  ieee.fdb_latexmk  ieee.fls  ieee.out  ieee.tex
tex/sample-sigconf/: comment.cut  sample-sigconf.aux  sample-sigconf.bbl  sample-sigconf.blg  sample-sigconf.fdb_latexmk  sample-sigconf.fls  sample-sigconf.tex
tex/sections/: acknowledgement.tex  introduction.tex
tex/sigconf/: sigconf.aux  sigconf.bbl  sigconf.blg  sigconf.fdb_latexmk  sigconf.fls  sigconf.out  sigconf.tex
